--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
             Our Services
         </h1>
         <div class="options">
-            <div class="boxes" id="box1"><img src="img/1.png" alt="img">
+            <div class="boxes" id="box1"><img src="1.png" alt="img">
                 <h2 class="centre">Fast Food</h2>
 
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur consectetur deserunt aliquam
                     quisquam hic officiis, eius doloremque, omnis id modi reiciendis beatae perspiciatis vel rem
                     excepturi. Cumque quo accusamus est reprehenderit possimus quibusdam mollitia at?</p>
             </div>
-            <div class="boxes" id="box2"><img src="img/2.png" alt="img">
+            <div class="boxes" id="box2"><img src="2.png" alt="img">
                 <h2 class="centre">Indian Food</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur consectetur deserunt aliquam
                     quisquam hic officiis, eius doloremque, omnis id modi reiciendis beatae perspiciatis vel rem
                     excepturi. Cumque quo accusamus est reprehenderit possimus quibusdam mollitia at?</p>
                 
             </div>
-            <div class="boxes" id="box3"><img src="img/3.png" alt="img">
+            <div class="boxes" id="box3"><img src="3.png" alt="img">
                 <h2 class="centre">Order Online</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur consectetur deserunt aliquam
                     quisquam hic officiis, eius doloremque, omnis id modi reiciendis beatae perspiciatis vel rem
@@ -68,10 +68,10 @@
             Trusted Companies 
         </h1>
         <div class="companies">
-            <img src="img/logo1.png" class="logos" alt="">
-            <img src="img/logo2.png" class="logos" alt="">
-            <img src="img/logo3.png" class="logos" alt="">
-            <img src="img/logo4.png" class="logos" alt="">        </div>
+            <img src="logo1.png" class="logos" alt="">
+            <img src="logo2.png" class="logos" alt="">
+            <img src="logo3.png" class="logos" alt="">
+            <img src="logo4.png" class="logos" alt="">        </div>
 
     </section>
 
